IS-27 support for security contact person